# euclidean_distance

./: README.md  pyproject.toml
euclidean_distance/: prog_csv_file_gen.py  prog_main.py
