[tool.poetry]
name = "euclidean_distance"
version = "0.1.0"
description = ""
authors = ["Vladislav Mikhalev <glbkshtnv@yandex.ru>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
